fix : responsive form on tablet / mobile

--- a/css/modal.css
+++ b/css/modal.css
@@ -217,6 +217,7 @@ main {
 	height: 100%;
 	width: 100%;
 	background-color: rgba(26, 39, 156, 0.4);
+	overflow: scroll;
 }
 
 /* Contenu de la modale */
